[gd_scene load_steps=51 format=2]

[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_003.png" type="Texture" id=1]
[ext_resource path="res://src/Enemy first/Enemy.gd" type="Script" id=2]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_002.png" type="Texture" id=3]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_004.png" type="Texture" id=4]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_001.png" type="Texture" id=5]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_006.png" type="Texture" id=6]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_007.png" type="Texture" id=7]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_008.png" type="Texture" id=8]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_009.png" type="Texture" id=9]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_005.png" type="Texture" id=10]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_000.png" type="Texture" id=11]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_010.png" type="Texture" id=12]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_012.png" type="Texture" id=13]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_015.png" type="Texture" id=14]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_014.png" type="Texture" id=15]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_016.png" type="Texture" id=16]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_013.png" type="Texture" id=17]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_017.png" type="Texture" id=18]
[ext_resource path="res://src/Enemy first/Walking/Golem_01_Walking_011.png" type="Texture" id=19]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_002.png" type="Texture" id=20]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_001.png" type="Texture" id=21]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_008.png" type="Texture" id=22]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_012.png" type="Texture" id=23]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_000.png" type="Texture" id=24]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_004.png" type="Texture" id=25]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_009.png" type="Texture" id=26]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_005.png" type="Texture" id=27]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_007.png" type="Texture" id=28]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_010.png" type="Texture" id=29]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_013.png" type="Texture" id=30]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_003.png" type="Texture" id=31]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_006.png" type="Texture" id=32]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_011.png" type="Texture" id=33]
[ext_resource path="res://src/Enemy first/Dying/Golem_01_Dying_014.png" type="Texture" id=34]
[ext_resource path="res://src/Sounds/345560__inspectorj__footsteps-stones-a.wav" type="AudioStream" id=35]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_002.png" type="Texture" id=36]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_003.png" type="Texture" id=37]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_004.png" type="Texture" id=38]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_005.png" type="Texture" id=39]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_007.png" type="Texture" id=40]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_006.png" type="Texture" id=41]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_009.png" type="Texture" id=42]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_008.png" type="Texture" id=43]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_000.png" type="Texture" id=44]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_001.png" type="Texture" id=45]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_010.png" type="Texture" id=46]
[ext_resource path="res://src/Enemy first/Attacking/Golem_01_Attacking_011.png" type="Texture" id=47]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.2725, 24.9015 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 28 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 23 ), ExtResource( 30 ), ExtResource( 34 ) ],
"loop": false,
"name": "dead",
"speed": 18.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 26.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 46 ), ExtResource( 47 ) ],
"loop": false,
"name": "attack",
"speed": 50.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.8475, 2.85768 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
speed = Vector2( 100, 1000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.166092, -2.92683 )
scale = Vector2( 0.134977, 0.134977 )
frames = SubResource( 2 )
animation = "attack"
frame = 3

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -16.056, 0 )
enabled = true
cast_to = Vector2( 0, 28 )
collision_mask = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sound of steps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 35 )
max_distance = 900.0

[node name="Timer for attack" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Stomping_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stomping_area"]
position = Vector2( 0, -25.1023 )
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer for attack" to="." method="_on_Timer_for_attack_timeout"]
[connection signal="body_entered" from="Stomping_area" to="." method="_on_Stomping_area_body_entered"]
